--- a/partials/player.html
+++ b/partials/player.html
@@ -12,19 +12,55 @@
     <div class="component_content">
         <span class="nc_pre"></span>
         <span class="nc_in">
-            <div ng-bind-html="message"></div>
+            <div ng-bind-html="message" converted_image_container></div>
         </span>
         <span class="nc_post"></span>    
     </div> 
 </div>
 
-<div id="duration">
+<div id="page_navigation">
     <div class="component_content">
-        <span class="nc_pre">next message in</span>
-        <span class="nc_in">{{duration}}</span>
-        <span class="nc_post">seconds</span>
+        <span class="nc_pre"></span>
+        
+        <span class="nc_in control_text">
+            <span  id="prev_page" class="click_control" ng-click="showPrevPage()">
+                <<
+            </span>
+            <span id="page_number">
+                <span class="page_number_label">
+                    page
+                </span>
+                
+                <span id="current_page_number">
+                    {{current_page_number}}
+                </span>
+                
+                <span id="page_number_seperator">
+                    of
+                </span>
+                
+                <span id="total_pages">
+                    {{total_pages}} 
+                </span>
+                     
+                <!-- </span> -->
+            </span>
+            
+           <span id="next_page" class="click_control" ng-click="showNextPage()">
+                >>
+            </span>
+
+        <span class="nc_post"></span>
     </div>
 </div>
+
+    <div id="duration">
+        <div class="component_content">
+            <span class="nc_pre">next message in</span>
+            <span class="nc_in">{{duration}}</span>
+            <span class="nc_post">seconds</span>
+        </div>
+    </div>
 
 <div id="timer_controls">
     <div class="component_content">
@@ -41,11 +77,34 @@
         <span class="component_label nc_post"></span>
     </div>
 </div>
+    
+    <div id="message_select">
+        <div class="component_content">
+            <span class="nc_pre"></span>
+            <span class="in click_control" ng-repeat="message in messages" ng-click="setMessage($index)">
+                <span class="message_name">
+                    {{message.name}}
+                </span>
+            </span>
+            <span class="nc_post"></span>    
+        </div>
+    </div>
 
-
-
-<script>
-
+    <div id="message_navigation">
+        <div class="component_content">
+            <span class="nc_pre"></span>
+            <span id="prev_message" class="click_control nc_in" ng-click="setPrevMessage()">
+                <span class="control_text">prev</span>
+            </span>
+            <span class="nc_post"></span>
+            
+            <span class="nc_pre"></span>
+            <span id="next_message" class="click_control nc_in" ng-click="setNextMessage()">
+                <span class="control_text">next</span>
+            </span>    
+            <span class="component_label nc_post"></span>
+        </div>
+    </div>
     
 
-</script>
+    
