--- a/styles/client_styles/demo.css
+++ b/styles/client_styles/demo.css
@@ -8,7 +8,13 @@ body {
 
 /*--- Message ---*/
 #message_name .nc_in {
-  font-size: 130px; }
+  font-size: 90px; }
+
+#message {
+  height: 500px; }
+  #message .ppt_image {
+    width: 300px;
+    height: 450px; }
 
 #message_select .message_name {
   display: block; }
