--- a/partials/player.html
+++ b/partials/player.html
@@ -1,3 +1,4 @@
+<div ng-cloak>
 <div id="message_name">
     <div class="component_content">
         <span class="nc_pre"></span>
@@ -105,6 +106,3 @@
             <span class="component_label nc_post"></span>
         </div>
     </div>
-    
-
-    
