--- a/styles/clients/demo.css
+++ b/styles/clients/demo.css
@@ -1,28 +1,110 @@
 body {
-  background-color: white; }
+  background-color: black; }
 
 /*--- Player ---*/
 #new_city_player {
-  background-color: lightgrey;
-  padding: 40px; }
+  background-color: white; }
 
 /*--- Message ---*/
-h1 {
-  font-size: 90px; }
+#message_name {
+  position: absolute;
+  top: -20px;
+  font-weight: 800;
+  text-align: center;
+  width: 75%;
+  left: 25%; }
+  #message_name .nc_component {
+    font-size: 70px; }
 
 #message {
-  height: 500px; }
+  height: 780px;
+  background-color: lightgrey;
+  position: absolute;
+  top: 80px;
+  width: 75%;
+  left: 25%; }
   #message .ppt_image {
-    width: 300px;
-    height: 450px; }
+    height: 100%; }
+  #message .converted_page {
+    text-align: center;
+    height: 800px; }
+  #message video {
+    width: 100%;
+    height: 100%;
+    margin-top: 90px; }
 
-#message_select .message_name {
-  display: block; }
+#page_navigation {
+  position: absolute;
+  width: 75%;
+  left: 25%;
+  text-align: center;
+  top: 860px; }
 
-/*--- Player Controls ---*/
-#message_navigation {
-  margin-top: 20px;
-  font-size: 32px; }
+#auto_update_timer, #update_time {
+  display: none; }
+
+#current_time {
+  color: grey;
+  position: relative;
+  top: 1045px;
+  left: 1580px;
+  font-size: 28px; }
+
+#page_number_seperator, #total_pages, #page_number {
+  display: none; }
+
+.metric {
+  display: none; }
+
+#weather {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: black;
+  color: white;
+  width: 25%;
+  left: 0; }
+  #weather .weather_local {
+    padding-left: 10px;
+    font-weight: 800;
+    font-size: 28px; }
+  #weather .feels_like {
+    text-transform: capitalize; }
+  #weather .weather_detail_components .nc_component {
+    padding-left: 10px;
+    font-size: 22px;
+    text-transform: capitalize; }
+    #weather .weather_detail_components .nc_component .component_label {
+      color: lightgrey; }
+
+#weather_forecast .forecast_local {
+  display: none; }
+#weather_forecast .forecast_days {
+  margin-top: 40px;
+  padding-left: 5px; }
+  #weather_forecast .forecast_days .forecast_day {
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black; }
+    #weather_forecast .forecast_days .forecast_day .date {
+      text-align: center;
+      font-size: 30px; }
+    #weather_forecast .forecast_days .forecast_day .graphic {
+      text-align: center; }
+    #weather_forecast .forecast_days .forecast_day .conditions {
+      font-size: 16px;
+      margin-bottom: 10px; }
+    #weather_forecast .forecast_days .forecast_day .high_low {
+      font-size: 20px;
+      text-align: center; }
+      #weather_forecast .forecast_days .forecast_day .high_low .component_label {
+        font-weight: 600; }
+  #weather_forecast .forecast_days .high_low {
+    display: inline-block; }
+
+#tickers {
+  display: none; }
 
 .nc_component {
   font-size: 40px; }
@@ -30,12 +112,7 @@ h1 {
 .click_control:hover {
   color: green; }
 
-#auto_update_timer, #update_time, #ticker {
-  display: none; }
-
-#weather_forecast .forecast_days .forecast_day {
-  display: inline-block; }
-#weather_forecast .forecast_days .high_low {
-  display: inline-block; }
+p {
+  margin: 0; }
 
 /*# sourceMappingURL=demo.css.map */
