--- a/styles/clients/demo.scss
+++ b/styles/clients/demo.scss
@@ -1,62 +1,184 @@
 body{
-	background-color: white;
+	background-color: black;
 }
 /*--- Player ---*/
-#new_city_player{
-	background-color: lightgrey;
-	padding: 40px;
+#new_city_player{ 
+	background-color: white;
+	// padding: 40px;
 }
 
 /*--- Message ---*/
-h1{
-	font-size: 90px;
+#message_name{
+	position: absolute;
+	top: -20px;
+	
+	.nc_component{
+  font-size: 70px;
+	  
+	}
+	// line-height: 100px;
+	font-weight: 800;
+	
+  text-align: center;
+  width: 75%;
+  left: 25%;
 }
 
 #message{
-	height: 500px;
+  height: 780px;
+  background-color: lightgrey;
+  
+  position: absolute;
+  top: 80px;
+  
+  width: 75%;
+  left: 25%;
 
 	.ppt_image{
-		width: 300px;
-		height: 450px;
+		// width: 300px;
+		height: 100%;
 	}
+	
+	.converted_page{
+	  text-align: center;
+	  height: 800px;
+	}
+	
+	video{
+	  width: 100%;
+	  height: 100%;
+	  margin-top: 90px;
+	}
+} // #message 
+
+//--- #page_navigation ---
+#page_navigation{
+  position: absolute;
+  width: 75%;
+  left: 25%;
+  text-align: center;
+  top: 860px;
 }
 
 
-
-#message_select{
-	.message_name{
-		display: block;
-	}	
-}
-/*--- Player Controls ---*/
-#message_navigation{
-	margin-top: 20px;
-	font-size: 32px;
-}
-
-.nc_component{
-	font-size: 40px;
-}
-
-.click_control:hover{
-	color: green;	
-}
-
-//--- hide elements ---
-
-#auto_update_timer, #update_time, #ticker{
+//--- Clock ---
+#auto_update_timer, #update_time{
 	display: none;
 }
 
-//--- Weather ---
-
-#weather_forecast{
+#current_time{
+  color: grey;
+  position: relative;
+  top: 1045px;
+  left: 1580px;
+  // padding-top: 10px;
+  // padding-left: 10px;
   
-.forecast_days{
-  .forecast_day{
-    display: inline-block;
-  } 
-  .high_low{
-    display: inline-block;
+  font-size: 28px;
+}
+
+#page_number_seperator, #total_pages, #page_number{
+  display: none;
+}
+
+//--- Weather ---
+.metric{
+  display: none;
+}
+
+
+
+#weather{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: black;
+  color: white;
+  width: 25%;
+  left: 0;
+  .weather_local{
+    padding-left: 10px;
+    font-weight: 800;
+    font-size: 28px;
   }
-}}
+  
+  .feels_like{
+    text-transform: capitalize;
+  }
+  
+  .weather_detail_components{
+    .nc_component{
+      padding-left: 10px;
+      font-size: 22px;
+      text-transform: capitalize;
+      
+      .component_label{
+        color: lightgrey;
+      }
+    }
+  }
+}
+
+#weather_forecast{ 
+  .forecast_local{
+    display: none;
+  }
+  
+  .forecast_days{
+    margin-top: 40px;
+    padding-left: 5px;
+    
+    .forecast_day{
+      display: inline-block;
+      margin-left: 10px;
+      margin-right: 10px;
+      
+      border-top: 2px solid black;
+      border-bottom: 2px solid black;
+      
+      .date{
+        text-align: center;
+        font-size: 30px;        
+      }
+      
+      .graphic{
+        text-align: center;
+      }
+      
+      .conditions{
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+      
+      .high_low{
+        font-size: 20px;
+        text-align: center;
+        
+        .component_label{
+          font-weight: 600;  
+        }
+        
+      }
+    } 
+    .high_low{
+      display: inline-block;
+    }
+  }
+} // #weather_forecast
+
+//--- Tickers ---
+#tickers{
+  display: none;
+}
+
+//--- Globals ---
+.nc_component{
+  font-size: 40px;
+}
+
+.click_control:hover{
+  color: green; 
+}
+
+p{
+  margin: 0;
+}
