--- a/partials/weather.html
+++ b/partials/weather.html
@@ -1,5 +1,5 @@
 <div class="weather_local">
-    {{weather.observation_location.full}}
+    {{weather.observation_location.city}}
 </div>
 
 <div class="weather_image nc_component">
