--- a/partials/tickers.html
+++ b/partials/tickers.html
@@ -1,16 +1,16 @@
 <div class="nc_component nc_ticker">
-    <ul class="ticker_list" id="ticker1" ticker>
-        <!-- <li ng-repeat="tick in ticker1"> -->
-            <!-- {{tick}} -->
-        <!-- </li> -->
+    <ul class="ticker" id="ticker1" ticker="ticker1">
         
-        <li>
+        <li ng-repeat="t in ticker1">
+            {{t}}
+        </li>
+        <!-- <li>
             Tick
         </li>
         
         <li>
             Tick2
-        </li>
+        </li> -->
     </ul>
 </div>
 
